With Playback 'All 3D viewport' disabled, playback still happens due to Eevee temporal AA [Material, Rendered view] #71539

Closed
opened 2019-11-13 14:01:56 +01:00 by Cenek Strichel · 11 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-08 22:59, hash: 0a0d735acd

Short description of error
Playback all 3D viewport disabled doesn't work with Material and Render preview (Eevee or Cycles)

Exact steps for others to reproduce the error

  1. open playback.blend
  2. play animation with SPACE (mouse over lower viewport)
  3. Two upper viewport are animated, but Playback > All 3D viewport is disabled
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-08 22:59, hash: `0a0d735acd` **Short description of error** Playback all 3D viewport disabled doesn't work with Material and Render preview (Eevee or Cycles) **Exact steps for others to reproduce the error** 1) open [playback.blend](https://archive.blender.org/developer/F8059937/playback.blend) 2) play animation with SPACE (mouse over lower viewport) 3) Two upper viewport are animated, but Playback > All 3D viewport is disabled
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Member

Hmrf, thats because of temporal AA (causing a refresh that would normally be skipped in screen_animation_step by checking match_region_with_redraws)
But in EEVEE_temporal_sampling_draw you'll get an DRW_viewport_request_redraw -- and thats why it looks like its animating there...

That being said, if you set Eeve viewport samples to 1, it works [not saying this is a solution to the problem...]

Eh, @Jeroen-Bakker, @fclem: not sure there is an easy way around this?

Hmrf, thats because of temporal AA (causing a refresh that would normally be skipped in `screen_animation_step` by checking `match_region_with_redraws`) But in `EEVEE_temporal_sampling_draw` you'll get an `DRW_viewport_request_redraw` -- and thats why it looks like its animating there... That being said, if you set Eeve viewport samples to 1, it works [not saying this is a solution to the problem...] Eh, @Jeroen-Bakker, @fclem: not sure there is an easy way around this?
Philipp Oeser changed title from Playback all 3D viewport disabled to With Playback 'All 3D viewport' disabled, playback still happens due to Eevee temporal AA [Material, Rendered view] 2019-11-14 17:48:46 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I'm removing the Animation tag as it doesn't seem to be related to the animation system.

I'm removing the Animation tag as it doesn't seem to be related to the animation system.

This would be easy to fix. In the case there is an animation playing, we just set TAA target sample to 1 in all viewports.

This would be easy to fix. In the case there is an animation playing, we just set TAA target sample to 1 in all viewports.

Removed subscriber: @dr.sybren

Removed subscriber: @dr.sybren

This issue was referenced by c9d94c2aba

This issue was referenced by c9d94c2abaf2f6ebf8b95faab34b04e5ebfba520

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-26 01:37:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71539
No description provided.