Fix T71539 EEVEE: Still redraw during playback when it shouldn't